--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
+-e .=connect4game
 attrs==23.1.0
 autobahn==23.6.2
 Automat==22.10.0
 cffi==1.16.0
 constantly==23.10.4
 cryptography==41.0.7
+enum34==1.1.10
 hyperlink==21.0.0
 idna==3.6
 incremental==22.10.0
 iniconfig==2.0.0
 numpy==1.26.2
+opencv-python==4.8.1.78
 packaging==23.2
 pluggy==1.3.0
 pyasn1==0.5.1
@@ -24,4 +27,3 @@ Twisted==23.10.0
 txaio==23.1.1
 typing_extensions==4.8.0
 zope.interface==6.1
-opencv-python==4.8.1.78
