--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,8 @@ pluggy==1.3.0
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.21
+cmake
+scikit-build
 pyniryo2==1.0.0
 pyOpenSSL==23.3.0
 pytest==7.4.3
